# algorithms

./: .env_example  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml  requirements.txt
app/: main.py
app/shrinking_algorithms/: __init__.py  base.py  genetic_algorithm.py  kruskal_algorithm.py  kruskals_config.json
embedding/: pyproject.toml
embedding/embedding/: embedding.py  graph_builder.py
puml_files/: file1.puml  file1_evolution.json  file1_kruskal.json  file2_evolution.json  file2_kruskal.json  file3_evolution.json  file4.puml
src/shrinking_algorithms/: __init__.py  main.py  shrinker.py
src/shrinking_algorithms/algorithms/: __init__.py  abstract_algorithm.py  abstract_factory.py  factory.py  types.py
src/shrinking_algorithms/algorithms/creators/: __init__.py  evol_creator.py  kruskal_creator.py  null_creator.py
src/shrinking_algorithms/algorithms/evol/: evol_algorithm.py  ga_config.json
src/shrinking_algorithms/algorithms/factories/: __init__.py  abstract_creator.py  evol_creator.py  evol_factory.py  kruskal_creator.py  kruskal_factory.py  null_creator.py
src/shrinking_algorithms/algorithms/preprocessing/: types.py  (+10 more)
src/shrinking_algorithms/embedding/: __init__.py  embedding.py  graph_builder.py  weights.json
src/shrinking_algorithms/parsers/: __init__.py  parse_puml_service.py  parser_config.json
src/shrinking_algorithms/shrinkers/: __init__.py  evol_shrinker.py  kruskal_shrinker.py
src/shrinking_algorithms/shrinking_algorithms/: factory.py  ga_config.json  genetic_algorithm.py
tests/: test_evol.py  test_kruskal.py  test_null.py  test_operational.py
tests/puml_files/: file2.puml  file3.puml  file3_kruskal.json  file5.puml
(+19 files in other folders)
