[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrinking-algorithms"
version = "0.1.0"
description = "shrinking algorithms"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy",
    "networkx",
    "node2vec"
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/app"]